--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser" : "1.12.4",
     "qr-image" : "2.0.0",
 
+    "rewire": "2.5.1",
     "chai": "*",
     "mocha": "*",
     "sinon" : "*",
