--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "name": "Cashier-BTC",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Self-hosted bitcoin payment gateway",
   "main": "cashier-btc.js",
-  "repository": "",
+  "repository": "https://github.com/Overtorment/Cashier-BTC",
+  "license": "WTFPL",
+  "author": "Igor Korsakov",
+  "scripts" : {
+    "test" : "mocha tests"
+  },
   "dependencies": {
     "async": "*",
     "express": "*",
