--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "Cashier-BTC",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "Self-hosted bitcoin payment gateway",
   "main": "cashier-btc.js",
   "repository": "https://github.com/Overtorment/Cashier-BTC",
   "license": "WTFPL",
   "author": "Igor Korsakov",
   "scripts": {
-    "test": "./node_modules/.bin/mocha tests/*"
+    "test": "./node_modules/.bin/standard && ./node_modules/.bin/mocha tests/*"
   },
   "dependencies": {
     "async": "*",
