--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "WTFPL",
   "author": "Igor Korsakov",
   "scripts": {
+    "postinstall" : "mkdir qr && chmod 777 qr",
     "test": "./node_modules/.bin/standard && ./node_modules/.bin/mocha tests/*"
   },
   "dependencies": {
