--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Cashier-BTC",
-  "version": "1.3.0",
+  "version": "2.0.0",
   "description": "Self-hosted bitcoin payment gateway",
   "main": "cashier-btc.js",
   "repository": "https://github.com/Overtorment/Cashier-BTC",
@@ -8,25 +8,24 @@
   "author": "Igor Korsakov",
   "scripts": {
     "postinstall": "mkdir qr && chmod 777 qr",
-    "test": "./node_modules/.bin/standard && ./node_modules/.bin/mocha tests/*"
+    "test": "./node_modules/.bin/standard && ./node_modules/.bin/mocha --exit tests/*",
+    "clean": "rm -r -f ./node_modules/ && rm -r -f ./qr/"
   },
   "dependencies": {
-    "async": "*",
-    "bitcore-lib": "0.13.13",
-    "body-parser": "*",
-    "chai": "*",
-    "express": "*",
+    "bitcore-lib": "0.15.0",
+    "body-parser": "^1.18.2",
+    "chai": "^4.1.2",
+    "express": "^4.16.2",
     "jayson": "^2.0.4",
-    "lodash": "^4.16.6",
-    "mocha": "*",
-    "morgan": "^1.7.0",
-    "node-uuid": "^1.4.7",
-    "qr-image": "*",
-    "request": "*",
+    "mocha": "^4.0.1",
+    "morgan": "^1.9.0",
+    "node-uuid": "^1.4.8",
+    "qr-image": "^3.2.0",
+    "request": "^2.83.0",
     "request-promise": "^4.2.2",
     "rewire": "^2.5.2",
-    "sinon": "*",
-    "standard": "^8.4.0",
-    "supertest": "*"
+    "sinon": "^4.0.2",
+    "standard": "^8.6.0",
+    "supertest": "^3.0.0"
   }
 }
