--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
             npm install
             cp config.js.dev config.js
             pwd
-            echo "deb https://apache.bintray.com/couchdb-deb trusty main" | sudo tee -a /etc/apt/sources.list
+            echo "deb https://apache.bintray.com/couchdb-deb jessie main" | sudo tee -a /etc/apt/sources.list
             curl -L https://couchdb.apache.org/repo/bintray-pubkey.asc | sudo apt-key add -
             sudo apt-get install apt-transport-https -y
             sudo apt-get update && sudo apt-get install couchdb
