--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,9 +45,7 @@ jobs:
             sudo chmod 0770 /usr/local/etc/couchdb/*.d
             sudo ln -s /usr/local/etc/logrotate.d/couchdb /etc/logrotate.d/couchdb
             sudo ln -s /usr/local/etc/init.d/couchdb /etc/init.d
-            sudo update-rc.d couchdb defaults# BOOM, we're done!# Another way to accomplish this: https://github.com/pixelpark/ppnet/wiki/Install-CouchDB-1.6.1-on-Ubuntu-14.04
-
-
+            sudo update-rc.d couchdb defaults
 
             curl -s -X PUT http://localhost:5984/_config/admins/user -d '"pass"'
             curl -s -X PUT http://user:pass@localhost:5984/cashier-btc
