--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,26 +26,28 @@ jobs:
             cp config.js.dev config.js
             pwd
 
-            sudo apt-get update
-            sudo apt-get -y install build-essential erlang-base-hipe erlang-dev erlang-manpages erlang-eunit erlang-nox libicu-dev libmozjs185-dev libcurl4-openssl-dev
-            wget http://mirrors.advancedhosters.com/apache/couchdb/source/1.6.1/apache-couchdb-1.6.1.tar.gz
-            tar -zxvf apache-couchdb-*.tar.gz
-            cd apache*
-            ./configure
-            make && sudo make install
-            sudo adduser --disabled-login --disabled-password --no-create-home --gecos "" couchdb
-            sudo chown -R couchdb:couchdb /usr/local/var/lib/couchdb
-            sudo chown -R couchdb:couchdb /usr/local/var/log/couchdb
-            sudo chown -R couchdb:couchdb /usr/local/var/run/couchdb
-            sudo chown -R couchdb:couchdb /usr/local/etc/couchdb
-            sudo chmod 0770 /usr/local/var/lib/couchdb/
-            sudo chmod 0770 /usr/local/var/log/couchdb/
-            sudo chmod 0770 /usr/local/var/run/couchdb/
-            sudo chmod 0770 /usr/local/etc/couchdb/*.ini
-            sudo chmod 0770 /usr/local/etc/couchdb/*.d
-            sudo ln -s /usr/local/etc/logrotate.d/couchdb /etc/logrotate.d/couchdb
-            sudo ln -s /usr/local/etc/init.d/couchdb /etc/init.d
+            sudo apt-get install --yes build-essential curl git
+            sudo apt-get install --yes python-software-properties python g++ make
+            sudo apt-get install -y erlang-dev erlang-manpages erlang-base-hipe erlang-eunit erlang-nox erlang-xmerl erlang-inets
+            sudo apt-get install -y libmozjs185-dev libicu-dev libcurl4-gnutls-dev libtool
+            cd /tmp
+            wget http://ftp.fau.de/apache/couchdb/source/1.6.1/apache-couchdb-1.6.1.tar.gz
+            tar xvzf apache-couchdb-*
+            cd apache-couchdb-*
+            ./configure && make
+            sudo make install
+            sudo useradd -d /var/lib/couchdb couchdb
+            sudo chown -R couchdb: /var/lib/couchdb /var/log/couchdb
+            sudo chown -R couchdb: /usr/local/var/{lib,log,run}/couchdb /usr/local/etc/couchdb
+            sudo chmod 0770 /usr/local/var/{lib,log,run}/couchdb/
+            sudo chmod 664 /usr/local/etc/couchdb/*.ini
+            sudo chmod 775 /usr/local/etc/couchdb/*.d
+            cd /etc/init.d
+            sudo ln -s /usr/local/etc/init.d/couchdb couchdb
+            sudo /etc/init.d/couchdb start
             sudo update-rc.d couchdb defaults
+            curl http://127.0.0.1:5984/
+            sudo service couchdb restart
 
             curl -s -X PUT http://localhost:5984/_config/admins/user -d '"pass"'
             curl -s -X PUT http://user:pass@localhost:5984/cashier-btc
