--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,23 +31,23 @@ jobs:
             sudo apt-get install -y erlang-dev erlang-manpages erlang-base-hipe erlang-eunit erlang-nox erlang-xmerl erlang-inets
             sudo apt-get install -y libmozjs185-dev libicu-dev libcurl4-gnutls-dev libtool
             cd /tmp
-            wget http://ftp.fau.de/apache/couchdb/source/1.6.1/apache-couchdb-1.6.1.tar.gz
+            wget http://ftp.fau.de/apache/couchdb/source/2.1.0/apache-couchdb-2.1.0.tar.gz
             tar xvzf apache-couchdb-*
             cd apache-couchdb-*
             ./configure && make
             sudo make install
-            sudo useradd -d /var/lib/couchdb couchdb
-            sudo chown -R couchdb: /var/lib/couchdb /var/log/couchdb
-            sudo chown -R couchdb: /usr/local/var/{lib,log,run}/couchdb /usr/local/etc/couchdb
-            sudo chmod 0770 /usr/local/var/{lib,log,run}/couchdb/
-            sudo chmod 664 /usr/local/etc/couchdb/*.ini
-            sudo chmod 775 /usr/local/etc/couchdb/*.d
+            sudo useradd -d /var/lib/couchdb couchdb || true
+            sudo chown -R couchdb: /var/lib/couchdb /var/log/couchdb || true
+            sudo chown -R couchdb: /usr/local/var/{lib,log,run}/couchdb /usr/local/etc/couchdb || true
+            sudo chmod 0770 /usr/local/var/{lib,log,run}/couchdb/ || true
+            sudo chmod 664 /usr/local/etc/couchdb/*.ini || true
+            sudo chmod 775 /usr/local/etc/couchdb/*.d || true
             cd /etc/init.d
-            sudo ln -s /usr/local/etc/init.d/couchdb couchdb
-            sudo /etc/init.d/couchdb start
-            sudo update-rc.d couchdb defaults
-            curl http://127.0.0.1:5984/
-            sudo service couchdb restart
+            sudo ln -s /usr/local/etc/init.d/couchdb couchdb || true
+            sudo /etc/init.d/couchdb start || true
+            sudo update-rc.d couchdb defaults || true
+            curl http://127.0.0.1:5984/ || true
+            sudo service couchdb restart || true
 
             curl -s -X PUT http://localhost:5984/_config/admins/user -d '"pass"'
             curl -s -X PUT http://user:pass@localhost:5984/cashier-btc
