--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,10 +57,10 @@ jobs:
 
       - run:
           name: Running bitcoind in background...
-          command: ~/Cashier-BTC/bitcoin-0.15.0/bin/bitcoind -rpcuser=user  -rpcpassword=pass -rpcbind=0.0.0.0  -rpcallowip=127.0.0.1 -datadir=./datadir/
+          command: ~/Cashier-BTC/bitcoin-0.15.0/bin/bitcoind -rpcuser=user  -rpcpassword=pass -rpcbind=0.0.0.0  -rpcallowip=127.0.0.1 -datadir=/tmp/
           background: true
 
-      - run: sleep 60
+      - run: sleep 30
 
       # run tests!
       - run: cd ~/Cashier-BTC; npm test
